--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "backend",
+  "name": "bankingapp-mock-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json --port 3000"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^0.16.2"
   }
 }
