--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "yup": "^1.4.0",
+    "react-swipeable": "^7.0.1",
     "zustand": "^4.5.1"
   }
 }
